--- a/.gitignore
+++ b/.gitignore
@@ -112,7 +112,7 @@ ipython_config.py
 #poetry.lock
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
+*/__pypackages__/
 
 # Celery stuff
 celerybeat-schedule
